# git-llm-utils

./: .gitignore  Makefile  README.md  git-llm-utils.spec  prepare-commit-msg.sample  pyproject.toml
.github/actions/artifacts/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yaml  verify.yaml
src/: cli.py  git-llm-utils.py  git_commands.py  llm_cli.py
src/git_llm_utils/: __init__.py  app.py  commit-msg.template  git.py  git_commands.py  llm.py  llm_cli.py  main.py  prepare-commit-msg.sample  prepare-commit-msg.template  utils.py
tests/: conftest.py  test_generate.py  test_server.py
tests/files/: generate_with_comments.out  generate_with_no_comments.out  status.out  status_with_emojis.out  verification.out
