[project]
name = "git-llm-utils"
version = "0.1.0"
description = "Generate a change message for commiting staged changes in the repo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.80.5",
    "lock>=2018.3.25.2110",
    "pydantic>=2.12.4",
    "pyinstaller>=6.16.0",
    "pyreadline3>=3.5.4",
    "typer<=0.18.0",
]
