[project]
authors = [{name = "Pablo Ilardi", email = "pilardi@gmail.com"}]
name = "git-llm-utils"
dynamic = ["version"]
description = "CLI tool for interacting with a LLM while using git"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.80.5",
    "lock>=2018.3.25.2110",
    "pydantic>=2.12.4",
    "pyreadline3>=3.5.4",
    "typer>=0.20.1",
]

[project.urls]
Respository = "https://github.com/pilardi/git-llm-utils.git"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/git_llm_utils/__init__.py"
template = '''
__version__ = "{version}"
'''

[tool.hatch.build.targets.wheel]
packages = ["src/git_llm_utils"]

[tool.uv-dynamic-versioning]
fallback-version = "0.1.0"

[dependency-groups]
dev = [
    "flask>=3.1.2",
    "pyinstaller>=6.17.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool.uv.build-backend]
module-name = "git_llm_utils"

[project.scripts]
git-llm-utils = "git_llm_utils.main:run"
